[package]
name = "rust-client-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.26"
libp2p = { version = "0.50.0", features = ["tokio", "websocket"] }
log = "0.4.17"
rust-client = { path = "../rust-client", default-features = false, features = ["tokio"] }
tokio = { version = "1.25.0", features = ["rt", "full"] }
