[package]
name = "libp2p-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["full"] }
tokio = { version = "1.24.2", features = ["full"] }
log = "0.4.17"